--- a/addval_upgrade_bills/views/report_invoice.xml
+++ b/addval_upgrade_bills/views/report_invoice.xml
@@ -25,7 +25,7 @@
                         <span t-field="o.partner_id.name"/>
                     </strong>
                     <br/>
-                    <span name="company_activity" class="font-italic" t-field="o.company_id.report_header"/>
+                    <span name="company_activity" class="font-italic" t-field="o.partner_id.l10n_cl_activity_description"/>
                     <div/>
                     <t t-esc="' - '.join([item for item in [
                         ', '.join([item for item in [header_address.street, header_address.street2] if item]),
@@ -99,7 +99,7 @@
                     <br/>
                 </t>
                 <strong>GIRO:</strong>
-                <span t-esc="o.company_id.partner_id.industry_id.name or ''"/>
+                <span t-esc="o.company_id.l10n_cl_activity_description or ''"/>
                 <br/>
             </div>
             <div class="col-6">
