--- a/addval_delivery_guide_upgrade/views/report_delivery_guide.xml
+++ b/addval_delivery_guide_upgrade/views/report_delivery_guide.xml
@@ -5,7 +5,7 @@
         </template>
 
         <record id="action_delivery_guide_report_pdf" model="ir.actions.report">
-            <field name="name">Delivery Guide SII (DTE 52)</field>
+            <field name="name">Delivery Guide SII (DTE 52)2</field>
             <field name="model">stock.picking</field>
             <field name="report_type">qweb-pdf</field>
             <field name="report_name">addval_delivery_guide_upgrade.delivery_guide_document</field>
