--- a/addval_delivery_guide_upgrade/views/report_delivery_guide.xml
+++ b/addval_delivery_guide_upgrade/views/report_delivery_guide.xml
@@ -2,7 +2,15 @@
 <odoo>
     <data>
 
-        <record id="action_delivery_guide_report_pdf" inherit_id="l10n_cl_edi_stock.action_delivery_guide_report_pdf">
+        <record id="action_delivery_guide_report_pdf" model="ir.actions.report">
+            <field name="name">Delivery Guide SII (DTE 52)</field>
+            <field name="model">stock.picking</field>
+            <field name="report_type">qweb-pdf</field>
+            <field name="report_name">l10n_cl_edi_stock.delivery_guide_document</field>
+            <field name="report_file">l10n_cl_edi_stock.delivery_guide_document</field>
+            <field name="print_report_name">'GDE Guide SII - %s' % (object.name)</field>
+            <field name="binding_model_id" ref="model_stock_picking"/>
+            <field name="binding_type">report</field>
         </record>
 
     </data>
