xpath Text must have parenthesis

--- a/addval_delivery_guide_upgrade/views/report_delivery_guide.xml
+++ b/addval_delivery_guide_upgrade/views/report_delivery_guide.xml
@@ -3,7 +3,7 @@
     <data>
 
         <template id="stock_informations" inherit_id="l10n_cl_edi_stock.stock_informations">
-            <xpath expr="//strong[Text='Address:']" position="replace">
+            <xpath expr="//strong[Text()='Address:']" position="replace">
                 <strong>Address:</strong>
             </xpath>
         </template>
