--- a/addval_delivery_guide_upgrade/views/report_delivery_guide.xml
+++ b/addval_delivery_guide_upgrade/views/report_delivery_guide.xml
@@ -12,7 +12,7 @@
 
         <template id="delivery_guide_document" inherit_id="l10n_cl_edi_stock.delivery_guide_document">
             <xpath expr="//th[@name='th_code']" position="replace"/>
-            <xpath expr="//t[@t-set='line_amounts']/tr[1]/td[1]" position="replace"/>
+            <xpath expr="//t[@t-value='total_line_amounts.get(line, {})']/tr[1]/td[1]" position="replace"/>
         </template>
 
         <!-- <record id="action_delivery_guide_report_pdf" model="ir.actions.report">
