--- a/addval_delivery_guide_upgrade/template/dte_template.xml
+++ b/addval_delivery_guide_upgrade/template/dte_template.xml
@@ -11,5 +11,20 @@
                 </t>
             </xpath>
         </template>
+
+        <template id="documento_dte">
+            <Documento t-att-ID="doc_id">
+                <t t-call="addval_delivery_guide_upgrade.dte_subtemplate"/>
+            </Documento>
+        </template>
+
+        <template id="dte_template" inherit_id="l10n_cl_edi_stock.dte_template">
+            <xpath expr="//t[@t-call='l10n_cl_edi_stock.dte_subtemplate']" position="replace">
+                <t t-call="addval_delivery_guide_upgrade.dte_subtemplate"/>
+            </xpath>
+            <xpath expr="//t[@t-call='l10n_cl_edi_stock.documento_dte']" position="replace">
+                <t t-call="addval_delivery_guide_upgrade.documento_dte"/>
+            </xpath>
+        </template>
     </data>
 </odoo>
